2009-11-03  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>

	* flumotion/extern (svn:ignore):
	Ignore command.OLD.

	This gets generated in the buildbot slave when the external
	revision of the command package is changed.

2009-11-03  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>

	* flumotion/extern (svn:externals):
	Upstream update to command package (r455).

	From upstream log:

	- command.py:
	Fix pep8 error.

	Allow natural formatting of a list, identified by a line that
	starts with a space then a dash.

	Add aliases to the interpreter as well.

	Allow a command with subcommands to implement a specific do()
	as well if no arguments are given.
	Add a method to give you a cmd.Cmd-style object that can be used
	to implement a shell main loop.

2009-11-03  Xavier Queralt  <xqueralt@flumotion.com>

	* configure.ac:
	* data/glade/Makefile.am:
	* flumotion/scenario/Makefile.am:
	* flumotion/scenario/steps/Makefile.am:
	* flumotion/scenario/steps/steps.xml:
	* flumotion/admin/assistant/save.py:
	* data/glade/loadconf-wizard.glade (added):
	* flumotion/scenario/loadconfiguration (added):
	* flumotion/scenario/loadconfiguration/__init__.py (added):
	* flumotion/scenario/loadconfiguration/loadconfiguration.xml (added):
	* flumotion/scenario/loadconfiguration/Makefile.am (added):
	* flumotion/scenario/loadconfiguration/wizard_gtk.py (added):
	* flumotion/scenario/steps/loadconfstep.py (added):
	Add a new scenario that allows to load an existing configuration file.
	Closes #1131

2009-11-02  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>

	* flumotion/extern (svn:externals):
	Fixes moap/extern/command revision (r451).  Closes #1381.

2009-10-30  Sébastien Merle  <sebastien@flumotion.com>

	* flumotion/launch/main.py:
	* flumotion/launch/parse.py:
	* flumotion/test/Makefile.am:
	* flumotion/test/test_launch_parse.py:
	* flumotion/test/test_launch_parse.py (added):
	Added compound properties support in flumotion-launch.
