@@ -1,3 +1,12 @@
+2009-11-03  Marc-André Lureau  <mlureau@flumotion.com>
+
+	reviewed by: Xavier Queralt
+
+	* flumotion/scenario/steps/productionsteps.py:
+	Assistant: Production page forgets the producers when going
+	backwards.
+	Closes: #1345
+
 2009-11-03  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>
 
 	* flumotion/extern (svn:ignore):
